add one more callback

--- a/part2/lecture8/05b_early_stopping.ipynb
+++ b/part2/lecture8/05b_early_stopping.ipynb
@@ -40,7 +40,7 @@
     "from pdb import set_trace\n",
     "from functools import partial\n",
     "import math\n",
-    "from fastai_tf.fastai.utils.callbacks import Runner, Callback, CancelTrainException, LR_Find, Recorder"
+    "from fastai_tf.fastai.callbacks import Runner, Callback, CancelTrainException, LR_Find, Recorder"
    ]
   },
   {
