--- a/part2/lecture8/04_callbacks.ipynb
+++ b/part2/lecture8/04_callbacks.ipynb
@@ -681,9 +681,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TF20",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf20"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
